--- a/index.html
+++ b/index.html
@@ -5,72 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kseniia Briaschei CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#about">About me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#code">Code Example</a></li>
-                <li><a href="#education">Education and Courses</a></li>
-                <li><a href="#english">English</a></li>
-            </ul>
-        </nav>
+        <div class="wrapper">
+            <nav>
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="#about">About me</a></li>
+                    <li class="menu__item"> <a href="#skills">Skills</a></li>
+                    <li class="menu__item"><a href="#code">Code Example</a></li>
+                    <li class="menu__item"><a href="#education">Education and Courses</a></li>
+                    <li class="menu__item"><a href="#english">English</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <aside>
-        <img src="photo.jpg" alt="photo_profile">
-        <h2>Contact information</h2>
-        <ul>
-            <li>Phone: +38 066 597 66 58</li>
-            <li>E-mail: bryaschey@gmail.com</li>
-            <li>Telegram: @bryaschey</li>
-        </ul>
-    </aside>
     <main>
-        <h1>Kseniia Briaschei</h1>
-        <section id="about">
-            <h2>About me</h2>
-            <p>I have been learning HTML, CSS and JavaScript for about 6 months. Every day I learn something new and improve myself.</p>
-        </section>
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS/SASS</li>
-                <li>JavaScript (Basic)</li>
-                <li>Git</li>
-            </ul>
-        </section>
-        <section id="code">
-            <h2>Code Example</h2>
-            <code><pre>
-                function litres(time) {
-                    return Math.floor(time * 0.5);
-                  }
-            </pre></code>
-        </section>
-        <section id="education">
-            <h2>Education and Courses</h2>
-            <ul>
-                <li>University: Dnipro State Medical University, Physician, Psychiatrist</li>
-                <li>Udemy
-                    <ul>
-                        <li>Web developer</li>
-                        <li>JavaScript + React (in process)</li>
+        <div class="wrapper">
+            <div class="main__container">
+                <aside class="main__aside">
+                    <img class="main__img" src="assets/img/photo.jpg" alt="photo profile">
+                    <h2 class="aside__header">Contact information</h2>
+                    <ul class="section__text">
+                        <li>Phone: <a href="tel:380665976658">+380665976658</a></li>
+                        <li>E-mail: <a href="mailto:bryaschey@gmail.com">bryaschey@gmail.com</a></li>
+                        <li>Telegram: @bryaschey</li>
                     </ul>
-                </li>
-            </ul>
-        </section>
-        <section id="english">
-            <h2>English</h2>
-            <p>A2+</p>
-        </section>
+                </aside>
+                <div class="main__main">
+                    <h1 class="main__title">Kseniia Briaschei</h1>
+                    <p class="main__text">Front-End developer</p>
+                    <section class="about" id="about">
+                        <h2 class="section__header">About me</h2>
+                        <p class="section__text">I have been learning HTML, CSS and JavaScript for about 6 months.
+                        Every day I learn something new and improve myself.</p>
+                    </section>
+                    <section id="skills">
+                        <h2 class="section__header">Skills</h2>
+                        <ul class="section__text">
+                            <li>HTML</li>
+                            <li>CSS/SASS</li>
+                            <li>JavaScript (Basic)</li>
+                            <li>Git</li>
+                        </ul>
+                    </section>
+                    <section id="code">
+                        <h2 class="section__header">Code Example</h2>
+                        <code><pre class="code__text">
+        function litres(time) {
+            return Math.floor(time * 0.5);
+        }
+                        </pre></code>
+                    </section>
+                    <section id="education">
+                        <h2 class="section__header">Education and Courses</h2>
+                        <ul class="section__text">
+                            <li>University: Dnipro State Medical University, Physician, Psychiatrist</li>
+                            <li>Udemy
+                                <ul>
+                                    <li>Web developer</li>
+                                    <li>JavaScript + React (in process)</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </section>
+                    <section id="english">
+                        <h2 class="section__header">English</h2>
+                        <p class="section__text">A2+</p>
+                    </section>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>© 2021 by Kseniia Briaschei</p>
-        <a href="https://github.com/Zlataks">Github</a>
-        <a href="https://rs.school/js/"><img src="footer__logo.svg" alt="logo RS School"></a>
+        <div class="wrapper">
+            <div class="footer__container">
+                <p class="footer__item">© 2021 by Kseniia Briaschei</p>
+                <a class="footer__item" href="https://github.com/Zlataks">Github</a>
+                <a class="footer__img" href="https://rs.school/js/"><img src="assets/logo/footer__logo.svg" alt="logo RS School"></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
